--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:text="Raw"
         android:textSize="@dimen/sensor_font_size"
+        android:fontFamily="monospace"
         android:id="@+id/sensorRaw"
         android:layout_below="@+id/sensorAccuracy"
         android:layout_centerHorizontal="true" />
